k8s/networkpolicy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: demo-app-network-policy
  namespace: demo-app
spec:
  podSelector:
    matchLabels:
      app: k8s-demo
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: default
        - podSelector: {}
      ports:
        - protocol: TCP
          port: 3000
